<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.alarmko.ui.home.HomeFragment"
        android:label="@string/nav_home"/>

    <fragment
        android:id="@+id/alarmsFragment"
        android:name="com.example.alarmko.ui.alarms.AlarmsFragment"
        android:label="@string/nav_alarms"/>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.alarmko.ui.history.HistoryFragment"
        android:label="@string/nav_history"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.alarmko.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"/>

    <fragment
        android:id="@+id/createAlarmFragment"
        android:name="com.example.alarmko.ui.CreateAlarmFragment"
        android:label="@string/create_alarm_title"/>

</navigation>